updated test script for spass demo

--- a/log.html
+++ b/log.html
@@ -1743,25 +1743,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16639],[[4,5,6,0,[],[1,33,16599],[],[[7,0,1,0,[8],[1,456,16174],[[0,9,10,0,11,12,0,0,[1,457,5707],[],[[458,2,13]]],[0,14,10,0,15,16,0,0,[1,6164,2],[],[]],[0,17,18,0,19,20,0,0,[1,6167,5002],[],[[11168,2,21]]],[0,22,10,0,23,24,0,0,[1,11170,156],[],[[11172,2,25]]],[0,17,18,0,19,26,0,0,[1,11327,2002],[],[[13329,2,27]]],[0,28,10,0,29,0,0,0,[1,13330,3298],[],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,82624],[[4,5,6,0,[],[1,31,82588],[],[[7,0,1,0,[8],[1,422,82196],[[0,9,10,0,11,12,0,0,[1,423,61284],[],[[423,2,13]]],[0,14,10,0,15,16,0,0,[1,61708,2],[],[]],[0,17,18,0,19,20,0,0,[1,61710,5003],[],[[66713,2,21]]],[0,22,10,0,23,24,0,0,[1,66714,101],[],[[66714,2,25]]],[0,17,18,0,19,26,0,0,[1,66815,2003],[],[[68818,2,27]]],[0,22,10,0,23,28,0,0,[1,68818,61],[],[[68818,2,29]]],[0,17,18,0,19,26,0,0,[1,68879,2004],[],[[70882,2,27]]],[0,22,10,0,23,30,0,0,[1,70884,137],[],[[70886,2,31]]],[0,17,18,0,19,26,0,0,[1,71022,2004],[],[[73025,2,27]]],[0,22,10,0,23,32,0,0,[1,73027,174],[],[[73029,2,33]]],[0,17,18,0,19,26,0,0,[1,73201,2002],[],[[75203,2,27]]],[0,22,10,0,23,34,0,0,[1,75203,92],[],[[75204,2,35]]],[0,17,18,0,19,26,0,0,[1,75296,2002],[],[[77298,2,27]]],[0,22,10,0,23,36,0,0,[1,77299,70],[],[[77300,2,37]]],[0,17,18,0,19,26,0,0,[1,77369,2002],[],[[79371,2,27]]],[0,38,10,0,39,0,0,0,[1,79372,3243],[],[]],[0,40,18,0,41,42,0,0,[1,82616,1],[],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SPASS","*C:\\Users\\j.antonio\\eclipse-workspace\\SPASS","*.","*SASignIn","*C:\\Users\\j.antonio\\eclipse-workspace\\SPASS\\SASignIn.robot","*SASignIn.robot","*Menus","*Regression","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>, ${browsers}[0]","*Opening browser 'Chrome' to base url '<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>'.","*Set Browser Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*10s","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5s","*Slept 5 seconds","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*class=css-u99vxg","*Clicking element 'class=css-u99vxg'.","*2s","*Slept 2 seconds","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AccountManagement","*Demo1","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>, ${browsers}[0]","*Opening browser 'Chrome' to base url '<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>'.","*Set Browser Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*10s","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5s","*Slept 5 seconds","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*id=lnbAccountManagementLink","*Clicking element 'id=lnbAccountManagementLink'.","*2s","*Slept 2 seconds","*id=lnbAccountLink","*Clicking element 'id=lnbAccountLink'.","*id=lnbPendingLink","*Clicking element 'id=lnbPendingLink'.","*id=lnbPartnerLink","*Clicking element 'id=lnbPartnerLink'.","*id=lnbRoleManagementLink","*Clicking element 'id=lnbRoleManagementLink'.","*id=lnbRoleManagementRoleGroupLink","*Clicking element 'id=lnbRoleManagementRoleGroupLink'.","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*%{username} ran this test on %{os}. Successfully displayed all working Account Management menus."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:16","fail":0,"label":"Regression","pass":1}],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"SPASS","name":"SPASS","pass":1},{"elapsed":"00:00:17","fail":0,"id":"s1-s1","label":"SPASS.SASignIn","name":"SASignIn","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:22","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:22","fail":0,"label":"Demo1","pass":1}],[{"elapsed":"00:01:23","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:01:23","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1592892256580;
+window.output["baseMillis"] = 1593050944609;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16660;
+window.output["generated"] = 82638;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
