--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16639],[[4,5,6,0,[],[1,33,16599],[],[[7,0,1,0,[8],[1,456,16174],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,82624],[[4,5,6,0,[],[1,31,82588],[],[[7,0,1,0,[8],[1,422,82196],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SPASS","*C:\\Users\\j.antonio\\eclipse-workspace\\SPASS","*.","*SASignIn","*C:\\Users\\j.antonio\\eclipse-workspace\\SPASS\\SASignIn.robot","*SASignIn.robot","*Menus","*Regression"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AccountManagement","*Demo1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:16","fail":0,"label":"Regression","pass":1}],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"SPASS","name":"SPASS","pass":1},{"elapsed":"00:00:17","fail":0,"id":"s1-s1","label":"SPASS.SASignIn","name":"SASignIn","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:22","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:22","fail":0,"label":"Demo1","pass":1}],[{"elapsed":"00:01:23","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:01:23","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1592892256580;
+window.output["baseMillis"] = 1593050944609;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16660;
+window.output["generated"] = 82638;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
