--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,82624],[[4,5,6,0,[],[1,31,82588],[],[[7,0,1,0,[8],[1,422,82196],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22269],[[4,5,6,0,[],[1,36,22230],[],[[7,0,1,0,[],[1,464,21800],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AccountManagement","*Demo1"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*LeiTest"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:22","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:22","fail":0,"label":"Demo1","pass":1}],[{"elapsed":"00:01:23","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:01:23","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1593050944609;
+window.output["baseMillis"] = 1593141644043;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 82638;
+window.output["generated"] = 22280;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
