--- a/log.html
+++ b/log.html
@@ -1743,25 +1743,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,82624],[[4,5,6,0,[],[1,31,82588],[],[[7,0,1,0,[8],[1,422,82196],[[0,9,10,0,11,12,0,0,[1,423,61284],[],[[423,2,13]]],[0,14,10,0,15,16,0,0,[1,61708,2],[],[]],[0,17,18,0,19,20,0,0,[1,61710,5003],[],[[66713,2,21]]],[0,22,10,0,23,24,0,0,[1,66714,101],[],[[66714,2,25]]],[0,17,18,0,19,26,0,0,[1,66815,2003],[],[[68818,2,27]]],[0,22,10,0,23,28,0,0,[1,68818,61],[],[[68818,2,29]]],[0,17,18,0,19,26,0,0,[1,68879,2004],[],[[70882,2,27]]],[0,22,10,0,23,30,0,0,[1,70884,137],[],[[70886,2,31]]],[0,17,18,0,19,26,0,0,[1,71022,2004],[],[[73025,2,27]]],[0,22,10,0,23,32,0,0,[1,73027,174],[],[[73029,2,33]]],[0,17,18,0,19,26,0,0,[1,73201,2002],[],[[75203,2,27]]],[0,22,10,0,23,34,0,0,[1,75203,92],[],[[75204,2,35]]],[0,17,18,0,19,26,0,0,[1,75296,2002],[],[[77298,2,27]]],[0,22,10,0,23,36,0,0,[1,77299,70],[],[[77300,2,37]]],[0,17,18,0,19,26,0,0,[1,77369,2002],[],[[79371,2,27]]],[0,38,10,0,39,0,0,0,[1,79372,3243],[],[]],[0,40,18,0,41,42,0,0,[1,82616,1],[],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22269],[[4,5,6,0,[],[1,36,22230],[],[[7,0,1,0,[],[1,464,21800],[[0,8,9,0,10,11,0,0,[1,465,12326],[],[[465,2,12]]],[0,13,9,0,14,15,0,0,[1,12791,3],[],[]],[0,16,17,0,18,19,0,0,[1,12795,2002],[],[[14797,2,20]]],[0,21,9,0,22,23,0,0,[1,14798,61],[],[]],[0,16,17,0,18,19,0,0,[1,14860,2003],[],[[16863,2,20]]],[0,24,9,0,25,23,0,0,[1,16864,113],[],[[16865,2,26]]],[0,16,17,0,18,19,0,0,[1,16977,2002],[],[[18979,2,20]]],[0,27,9,0,28,0,0,0,[1,18980,3284],[],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AccountManagement","*Demo1","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>, ${browsers}[0]","*Opening browser 'Chrome' to base url '<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>'.","*Set Browser Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*10s","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5s","*Slept 5 seconds","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*id=lnbAccountManagementLink","*Clicking element 'id=lnbAccountManagementLink'.","*2s","*Slept 2 seconds","*id=lnbAccountLink","*Clicking element 'id=lnbAccountLink'.","*id=lnbPendingLink","*Clicking element 'id=lnbPendingLink'.","*id=lnbPartnerLink","*Clicking element 'id=lnbPartnerLink'.","*id=lnbRoleManagementLink","*Clicking element 'id=lnbRoleManagementLink'.","*id=lnbRoleManagementRoleGroupLink","*Clicking element 'id=lnbRoleManagementRoleGroupLink'.","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*%{username} ran this test on %{os}. Successfully displayed all working Account Management menus."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*LeiTest","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>, ${browsers}[0]","*Opening browser 'Chrome' to base url '<a href=\"https://dev-admin.samsungpass.com/#/\">https://dev-admin.samsungpass.com/#/\x3c/a>'.","*Set Browser Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*10s","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2s","*Slept 2 seconds","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*id=lnbAccountManagementLink","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element 'id=lnbAccountManagementLink'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:22","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:22","fail":0,"label":"Demo1","pass":1}],[{"elapsed":"00:01:23","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:01:23","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1593050944609;
+window.output["baseMillis"] = 1593141644043;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 82638;
+window.output["generated"] = 22280;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
