--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,24173],[[4,5,6,0,[],[1,30,24133],[],[[7,0,1,0,[8],[1,405,23754],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,18867],[[4,5,6,0,[],[1,34,18830],[],[[7,0,1,0,[8],[1,421,18441],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*NavigateToSamsungAccountLoginAdmin","*Regression1_Happy path"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AppManagementSearchList","*Demo1_Happy path"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:24","fail":0,"label":"Regression1_Happy path","pass":1}],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:00:24","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:18","fail":0,"label":"Demo1_Happy path","pass":1}],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:00:19","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1594957548717;
+window.output["baseMillis"] = 1595229817100;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24197;
+window.output["generated"] = 18885;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
