--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,24083],[[4,5,6,0,[],[1,33,24048],[],[[7,0,1,0,[8],[1,423,23657],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,93424],[[4,5,6,0,[],[0,33,93385],[],[[7,0,1,0,[8],[0,427,92989,9],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AppManagementSearchList","*Demo1_Happy path"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AppManagementSearchList","*Demo1_Happy path","*Element with locator 'class=css-1n9d5gc' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:24","fail":0,"label":"Demo1_Happy path","pass":1}],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:00:24","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:33","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:01:33","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:01:33","fail":1,"label":"Demo1_Happy path","pass":0}],[{"elapsed":"00:01:33","fail":1,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":0},{"elapsed":"00:01:33","fail":1,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1595323426290;
+window.output["baseMillis"] = 1595382931004;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24100;
+window.output["generated"] = 93530;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
