added error validation when Version name exists

--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,157600],[[4,5,6,0,[],[0,33,157562],[],[[7,0,1,0,[4],[0,427,157167,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,195631],[[4,5,6,0,[],[1,33,195593],[],[[7,0,1,0,[4],[1,502,195123],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AppManagement","*No radio button with name 'Forced Update' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework-Spass-Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo","*.","*Demo","*C:\\Robot\\Git Repo\\robotframework-spass-demo\\Demo.robot","*Demo.robot","*AppManagement"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:37","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:02:37","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:02:37","fail":1,"label":"Demo","pass":0}],[{"elapsed":"00:02:38","fail":1,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":0},{"elapsed":"00:02:38","fail":1,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:03:15","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:03:15","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:03:15","fail":0,"label":"Demo","pass":1}],[{"elapsed":"00:03:16","fail":0,"id":"s1","label":"Robotframework-Spass-Demo","name":"Robotframework-Spass-Demo","pass":1},{"elapsed":"00:03:16","fail":0,"id":"s1-s1","label":"Robotframework-Spass-Demo.Demo","name":"Demo","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1595402607273;
+window.output["baseMillis"] = 1595409284077;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 157642;
+window.output["generated"] = 195711;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
